[package]
name = "rust3"
version = "0.1.0"
authors = ["Geoff Shannon <geoffpshannon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.2.0"
rustyline = "5.0.3"

[[bin]]
name = "step0_repl"
path = "step0_repl.rs"
