[package]
name = "mal"
version = "0.1.0"
authors = ["Geoff Shannon <geoffpshannon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archery = "*"
derive_more = "0.99.1"
nom = "5.0.1"
once_cell = "1.2"
regex = "1.0"
rpds = "0.7"
rug = "1.6"
rustyline = "5.0.3"
